# libtropic-arduino

./: .clang-format  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FAQ.md  README.md  extra_build_script.py  extra_script.py  library.json  library.properties
.github/: pull_request_template.md
.github/workflows/: clang_format_check.yml  release_new_version.yml
docs/: FAQ.md  index.md
examples/ECDSA_P256/: ECDSA_P256.ino
examples/EdDSA_Ed25519/: EdDSA_Ed25519.ino
examples/MAC_and_destroy/: MAC_and_destroy.ino
examples/hello_world/: hello_world.ino
examples/r_memory/: r_memory.ino
scripts/: parse_changelog.py
src/: LibtropicArduino.cpp  LibtropicArduino.h
